fixed container heights and table overflows

--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -166,6 +166,11 @@ body {
     height: 75vh;
 }
 
+.createButton:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s ease-in-out;
+}
+
 /*edit truck form*/
 
 #editTruckForm {
